--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"lucide-svelte": "^0.479.0"
+		"lucide-svelte": "^0.479.0",
+		"mode-watcher": "^0.5.1"
 	}
 }
