--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,11 +27,13 @@
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"mode-watcher": "^0.5.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.10",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^3.4.17",
@@ -41,7 +43,6 @@
 	},
 	"dependencies": {
 		"@tanstack/table-core": "^8.21.2",
-		"lucide-svelte": "^0.479.0",
-		"mode-watcher": "^0.5.1"
+		"lucide-svelte": "^0.479.0"
 	}
 }
